k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: outfitstyle
  labels:
    name: outfitstyle
